syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "CarManagementService.grpc";

// CarService
service CarService {
  rpc getAllCars (google.protobuf.Empty) returns (CarList);
  rpc getCarByID (CarRequest) returns (CarResponse);
  rpc addCar (Car) returns (CarResponse);
  rpc updateCar (Car) returns (CarResponse);
  rpc deleteCar (CarRequest) returns (CarResponse);
}


message CarRequest {
  string car_id = 1;
}

message Car {
  int32 car_id = 1;
  string vin = 2;
  int32 yearproduced = 3;
  string manufactor = 4;
  string model = 5;
  string color = 6;
  string altname = 7;
  int32 seats = 8;
  int32 carrange = 9;
  int32 locationhubref = 10;
}

message CarList {
  repeated Car cars = 1;
}

message CarResponse {
  bool success = 1;
  string message = 2;
  Car car = 3;
}

// BookingCarService
service BookingCarService {
  rpc GetAllBookingCars (google.protobuf.Empty) returns (BookingCarList);
  rpc GetBookingCarByID (BookingCarRequest) returns (BookingCarResponse);
  rpc AddBookingCar (BookingCar) returns (BookingCarResponse);
  rpc UpdateBookingCar (BookingCar) returns (BookingCarResponse);
  rpc DeleteBookingCar (BookingCarRequest) returns (BookingCarResponse);
}

message BookingCarRequest {
  int32 bookingNr = 1;
}

message BookingCar {
  int32 bookingnr = 1;
  string status = 2;
  string startdato = 3;
  string starttime = 4;
  string enddate = 5;
  string endtime = 6;
  string price = 7;
  int32 greenshare = 8;
  int32 carid = 9;
  int32 customerid = 10;
}

message BookingCarList {
  repeated BookingCar booking_cars = 1;
}

message BookingCarResponse {
  bool success = 1;
  string message = 2;
  BookingCar bookingCar = 3;
}

// LocationHubService
service LocationHubService {
  rpc GetAllLocationHubs (google.protobuf.Empty) returns (LocationHubList);
  rpc GetLocationHubByID (LocationHubRequest) returns (LocationHubResponse);
  rpc AddLocationHub (LocationHub) returns (LocationHubResponse);
  rpc UpdateLocationHub (LocationHub) returns (LocationHubResponse);
  rpc DeleteLocationHub (LocationHubRequest) returns (LocationHubResponse);
}

message LocationHubRequest {
  int32 id = 1;
}

message LocationHub {
  int32 id = 1;
  string locationname = 2;
  string address = 3;
  string city = 4;
  string country = 5;
  string email = 6;
  string phonenr = 7;
  int32 carcapacity = 8;
}

message LocationHubList {
  repeated LocationHub locationhub = 1;
}

message LocationHubResponse {
  bool success = 1;
  string message = 2;
  LocationHub locationHub = 3;
}
