syntax = "proto3";
import "google/protobuf/empty.proto";
option java_package = "PaymentService.grpc";

service PaymentService {
  rpc CreatePayment (PaymentRequest) returns (PaymentResponse);
  rpc GetPaymentById (PaymentRequestById) returns (PaymentResponse);
  rpc UpdatePaymentStatus (PaymentStatusUpdateRequest) returns (PaymentResponse);
  rpc ListPayments (PaymentEmpty) returns (PaymentListResponse);

  rpc CreateCreditcard (CreditcardRequest) returns (CreditcardResponse);
  rpc GetCreditcardById (CreditcardRequestById) returns (CreditcardResponse);
}
// Besked til oprettelse af et kreditkort
message CreditcardRequest {
  int64 creditcard_id = 1;
  string creditcardnr = 2;
  string cc_name = 3;
  string cc_lastname = 4;
  int64 customerid = 5;
}

message CreditcardResponse {
  int64 creditcard_id = 1;
  string creditcardnr = 2;
  string cc_name = 3;
  string cc_lastname = 4;
  int64 customerid = 5;
}

message CreditcardRequestById {
  int64 creditcard_id = 1;
}

message PaymentRequest {
  int64 id = 1;
  int64 customer = 2;
  int32 bookingType = 3; // 0 for car, 1 for greenshare
  int64 booking = 4;
  string status = 5;
  int64 creditcardref = 6;
}

message PaymentRequestById {
  int64 id = 1;
}

message PaymentStatusUpdateRequest {
  int64 id = 1;
  string status = 2;
}

message PaymentResponse {
  int64 id = 1;
  int64 customer = 2;
  int32 bookingType = 3;
  int64 booking = 4;
  string status = 5; // Aktuel betalingsstatus
  int64 creditcardref = 6;
  bool success = 7; //indikere om den gik igennem
}

message PaymentListResponse {
  repeated PaymentResponse payments = 1;
}

message PaymentEmpty {}