syntax = "proto3";
import "google/protobuf/empty.proto";
option java_package = "UserService.grpc";

service UserService {
  rpc RegisterUser (User) returns (UserResponse);
  rpc LoginUser (LoginRequest) returns (LoginResponse);
  rpc GetUserById (UserRequest) returns (UserResponse);
  rpc UpdateUser (User) returns (UserResponse);
  rpc DeleteUser (UserRequest) returns (UserResponse);
  rpc ListUsers (UserEmpty) returns (UserList);
}

message UserEmpty {}

message UserRequest {
  int32 id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
  string password = 5;
}

message UserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message UserList {
  repeated User users = 1;
}